base/applications-data/debezium/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: debezium
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # cert-manager.io/cluster-issuer: letsencrypt-prod
    # whitelist IPs:
    # nginx.ingress.kubernetes.io/whitelist-source-range: ""

spec:
  ingressClassName: nginx
  tls:
    - secretName: debezium-tls
      hosts:
        - schema-registry${ARGOCD_ENV_DNS}.local.com.br

  rules:
    - host: schema-registry${ARGOCD_ENV_DNS}.local.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: schema-registry
                port:
                  number: 8081
